--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,30 @@
-* {
+/*
+			<li>Please make the h1 30px, with a little padding on the left, and thin red border</li>
+			<li>Please make the h2 25px, with padding on top/bottom, a thick gold border, and margin on the top/bottom</li>
+			<li>Please make the spans have a thin black border, a little padding, and blue</li>
+			<li>Please make the section 25% width, 200px tall, centered, and with a thin purple border</li>
+*/
+*{
   box-sizing: border-box;
 }
 
-/* Please make the h1 30px, with a little padding on the left, and thin red border */
 h1 {
   font-size: 30px;
-  padding-left: 20px;
-  border: red 2px solid;
+  padding-left: 40px;
+  border: 2px solid red;
+  background-color: lightblue;
 }
-/* Please make the h2 25px, with padding on top/bottom, a thick gold border, and margin on the top/bottom */
+
 h2 {
   font-size: 25px;
   padding: 100px 0 100px 0;
-  margin-top: 30px;
-  border: 3px solid gold;
+  margin: 20px 0 20px 0;
+  border: 5px solid gold;
+  background-color: rgb(112, 107, 223);
 }
-/* Please make the spans have a thin black border, a little padding, and blue */
+
 span {
-  border: 2px solid black;
-  padding: 10px;
   color: blue;
-}
-/* Please make the section 25% width, 200px tall, centered, and with a thin purple border */
-section {
-  width: 25%;
-  height: 200px;
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid purple;
+  border: 1px black solid;
+  padding: 5px;
 }
